--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
+}
+
+/** career home page ***/
+.home-page-container {
+  display: grid;
+  grid-template-columns: 1fr 18fr 1fr;
+  grid-template-rows: 7px auto;
+  grid-template-areas:
+    "header header header"
+    "leftMargin content rightMargin"
+}
+
+.home-page-content {
+  grid-area: content;
+}
+
+/***************** grid ******************************/
+
+/***** profile *******/
+
+.profile-container {
+  display: grid;
+  grid-template-columns: 1fr 18fr 1fr;
+  grid-template-rows: 7px auto;
+  grid-template-areas:
+    "header header header"
+    "leftMargin content rightMargin"
+}
+
+.profile-content {
+  grid-area: content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  place-self: stretch;
+  min-height: 270px;
+}
+
+/***login register page****/
+
+.login-register-container {
+  display: grid;
+  grid-template-columns: 2fr 6fr 2fr;
+  grid-template-rows: 15px auto;
+  grid-template-areas:
+    "header header header"
+    "leftMargin content rightMargin"
+}
+.login-register-content {
+  grid-area: content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  place-self: stretch;
+  min-height: 270px;
+}
+
+
+/***** small widget **********/
+.homepage-tags-container{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: 21px;
+  place-content: start;
+  column-gap: 2px;
+}
+
+.homepage-buttons-container{
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto;
+  place-content: start;
+  column-gap: 7px;
 }
