--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,18 @@ code {
   monospace;
 }
 
+/**************************** home ********************************************/
+.homepage-container{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 220px);
+  grid-template-rows: repeat(auto-fill, 100px);
+  place-content: center;
+  column-gap: 20px;
+  row-gap: 20px;
+
+  margin-top: 20px;
+}
+
 /***************************** career **************************************************/
 .career-list-layout {
   display: grid;
@@ -197,4 +209,24 @@ code {
 .language-card-content{
   grid-area: content;
   border-top: 1px solid grey;
+}
+
+/**** home page route card ********/
+.route-card{
+  display: grid;
+  grid-template-rows: 100px;
+  grid-template-columns: 220px;
+  grid-template-areas:
+    "content";
+
+  box-shadow: 10px 5px 5px dimgrey;
+  background-color: #F7F2F6;
+}
+
+.route-card-content{
+  grid-area: content;
+  justify-self: center;
+  align-self: center;
+
+  color: whitesmoke;
 }
